@@ -32,7 +32,7 @@ install(DIRECTORY "expectedResults" DESTINATION ${THIS_STRELKADEMODIR})
 
 install(FILES runStrelkaGermlineWorkflowDemo.bash  DESTINATION ${THIS_BINDIR} PERMISSIONS ${THIS_EXECUTABLE_PERMISSIONS})
 install(FILES runStrelkaSomaticWorkflowDemo.bash  DESTINATION ${THIS_BINDIR} PERMISSIONS ${THIS_EXECUTABLE_PERMISSIONS})
-#install(FILES "runMitoWorkflowDemo.bash"  DESTINATION ${THIS_BINDIR} PERMISSIONS ${THIS_EXECUTABLE_PERMISSIONS})
+install(FILES runMitoWorkflowDemo.bash  DESTINATION ${THIS_LIBEXECDIR} PERMISSIONS ${THIS_EXECUTABLE_PERMISSIONS})
 #install(FILES "runDenovoVariantWorkflowDemo.bash"  DESTINATION ${THIS_BINDIR} PERMISSIONS ${THIS_EXECUTABLE_PERMISSIONS})
 
 # add legacy filename links
