@@ -1,3 +1,4 @@
+- STREL-200 Adjust mito strand-bias for consistency with autosomes
 - STREL-319 Sync RNA-seq EVS feature names with DNA changes
 - STREL-318 Accept VCFs with unknown ALT values as forced-call sites
 - STREL-275 REF and ALTs do not share a common prefix of size over 1 
